crates/test-files/fixtures/compile_errors/contract_function_with_generic_params.fe
use std::traits::IsNumeric

contract Foo {
    pub fn bar<T: IsNumeric>(val: T) {}
}
